Currently working sign up

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,4 +1,4 @@
-<html lang="en" xmlns:th="http://www.thymeleaf.org/">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org/">
 
 <head>
     <meta charset="UTF-8">
@@ -45,19 +45,19 @@
                             class="sign-up__header--link">Log in</a></span>
                 </header>
                 <section class="sign-up__form">
-                    <form id="signup-submit">
+                    <form id="signup-submit" action="#" th:action="@{/save}" th:object="${user}" method="post">
                         <div class="sign-up__input-group">
                             <label for="fullName">Full Name</label>
-                            <input type="text" name="fullName" id="fullName" required="">
+                            <input type="text" th:field="*{fullName}" th:name="fullName" id="fullName" required="">
                         </div>
                         <div class="sign-up__input-group">
                             <label for="email">Email</label>
-                            <input type="email" name="email" id="email" required="">
+                            <input type="email" th:field="*{email}" th:name="email" id="email" required="">
                             <span class="sign-up__invalid-feedback">Email address already in use.</span>
                         </div>
                         <div class="sign-up__input-group">
                             <label for="password">Password</label>
-                            <input type="password" name="password" id="password"
+                            <input type="password" th:field="*{password}" th:name="password" id="password"
                                 placeholder="Must be at least 6 characters" required="">
                             <i class="far fa-eye" id="togglePassword"></i>
                         </div>
